--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -10,6 +10,7 @@
 <meta name="description" content="Get in touch with us in case you have any questions, feedback or you just want to say hello! We love talking to you! ">
 <!-- Mobile Metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 <link rel="icon" href="http://cozee.in/include/_images/favicon.ico">
 <!-- Web Fonts  -->
 <link href="./Contact Us _ Cozee_files/css(1)" rel="stylesheet" type="text/css">
