--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -37,6 +37,7 @@
     body {
         font-family: raleway;
                 height: 100vh;
+                width: 100vw;
     }
 
         #google_map {
