--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -40,18 +40,21 @@
     }
         #google_map {
             background: #5B458D;
+            height: 100vh;
         }
         #contact_form {
+            height: 100vh;
         }
         #googlemaps {
             box-shadow: 0px 0px 10px 1px black;
-            /*height: 56vh;*/
+            height: 56vh;
         }
         .container {
-            padding-top: 2vh;
+            padding-top: 1.6vh;
+            margin-left: 0px !important;margin-right: 0px !important;
         }
         .address-field {
-            padding: 0.5vh;
+            padding: 0.4vh;
         }
 
         .btn {
