--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -47,7 +47,7 @@
         }
         #googlemaps {
             box-shadow: 0px 0px 10px 1px black;
-            height: 56vh;
+            /*height: 56vh;*/
         }
         .container {
             padding-top: 1.6vh;
