--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -40,17 +40,17 @@
     }
         #google_map {
             background: #5B458D;
-            height: 100vh;
+            /*height: 100vh;*/
         }
         #contact_form {
-            height: 100vh;
+            /*height: 100vh;*/
         }
         #googlemaps {
             box-shadow: 0px 0px 10px 1px black;
             /*height: 56vh;*/
         }
         .container {
-            padding-top: 1.6vh;
+
             margin-left: 0px !important;margin-right: 0px !important;
         }
         .address-field {
@@ -69,7 +69,7 @@
             <!--Address and Google Map  start here -->
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="google_map">
 
-                    <div class="container">
+                    <div class="container" style="padding-top: 1.6vh;">
                         <h2 style="color: white !important;"><strong>Cozee</strong></h2>
 
                         <address style="color: white !important;">
@@ -114,7 +114,7 @@
 
 
             <!-- Contact form -->
-            <div class="container">
+            <div class="container" style="padding-top: 1.6vh;">
                 <!-- Contact form -->
                 <h4 style="color:#5B458D !important;"><strong>Contact</strong> Us</h4>
                 <p style="text-align:justify; color:#777;">Have a suggestion? Have a complaint? Or simply wanna say Hello? Feel free to get in touch with us.</p>
