--- a/test_page/form2.html
+++ b/test_page/form2.html
@@ -34,20 +34,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="styleForm2.css">
-    <style>
-    #view-source {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
-      z-index: 900;
-    }
-    </style>
+<script src="js/formscript.js"></script>
   </head>
   <body>
-    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+    <div
+    class="demo-layout
+    mdl-layout
+    mdl-layout--fixed-header
+    mdl-js-layout
+    mdl-color--grey-100">
       <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title"><strong>Cozee</strong></span>
@@ -64,6 +59,10 @@
         </div>
       </header>
       <div class="demo-ribbon"></div>
+
+
+
+
       <main class="demo-main mdl-layout__content">
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
@@ -77,9 +76,9 @@
             <h3>Software Development Engineer
 
 <!-- Accent-colored raised button with ripple -->
-<button class="pull-xs-right mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+<a href="#iform" class="pull-xs-right mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="text-decoration: none;">
   Apply for this position
-</button></h3>
+</a></h3>
 
 
 
@@ -314,13 +313,17 @@
             </ul>
           </div>
         </footer>
+
+
       </main>
     </div>
 
-  <script src="mdl/material.min.js"></script>
-      <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- Bootstrap JavaScript -->
-    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<!-- Bootstrap JavaScript -->
+<script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+<!-- form helper -->
+<script src="mdl/material.min.js"></script>
+<script src="js/country_phone_number.js"></script>
   </body>
 </html>
