--- a/test_page/form2.html
+++ b/test_page/form2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Design Lite</title>
+    <title>Job Opening</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -70,9 +70,6 @@
             <div class="demo-crumbs mdl-color-text--grey-500">
               Cozee &gt; Careers &gt; Software Development Engineer
             </div>
-
-
-
             <h3>Software Development Engineer<!-- Accent-colored raised button with ripple -->
 <a href="#iform" class="pull-xs-right mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="text-decoration: none;">
 Apply for this position
@@ -157,7 +154,7 @@ Apply for this position
 
 
 
-            <div class="container"  id="iform">
+            <div   id="iform">
                 <hr>
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 jf">
@@ -303,36 +300,36 @@ Apply for this position
           </div>
         <div class="mdl-cell mdl-cell--3-col  mdl-cell--hide-tablet mdl-cell--hide-phone" style="">
 
-        <div class="demo-card-square mdl-card mdl-shadow--2dp">
-          <div class="mdl-card__title mdl-card--expand">
-            <h2 class="mdl-card__title-text">Current Job Openings</h2>
-          </div>
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h2 class="mdl-card__title-text">Current Job Openings</h2>
+  </div>
 
-          <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Front-End Engineer
-            </a>
-          </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Front-End Engineer
+    </a>
+  </div>
 
-          <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-            Back-End Engineer
-            </a>
-          </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+    Back-End Engineer
+    </a>
+  </div>
 
-          <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Account Manager
-            </a>
-          </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Account Manager
+    </a>
+  </div>
 
-          <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Customer Relation
-            </a>
-          </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Customer Relation
+    </a>
+  </div>
 
-        </div>
+</div>
 
         </div>
 
